objects/Contact.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Employer_State__c</fullName>
        <description>This field is optional and manually updated. The state of the primary employer for the account holder.</description>
        <inlineHelpText>The state of the primary employer for the account holder.</inlineHelpText>
        <label>Employer State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AB</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Birth_Certificate__c</fullName>
        <description>This field is optional and manually updated. Civil Birth Certificate (required for applicants under 18 if passport is not provided) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Civil Birth Certificate (required for applicants under 18 if passport is not provided) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Birth Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Certifying_Acceptance_Date__c</fullName>
        <description>This field is optional and manually updated. The date of the financial institution&apos;s Certifying Acceptance Agent agreement with the IRS.</description>
        <inlineHelpText>The date of the financial institution&apos;s Certifying Acceptance Agent agreement with the IRS.</inlineHelpText>
        <label>Form W7 Certifying Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_College_City_State__c</fullName>
        <description>This field is optional and manually updated. The city and state where the institution that the account holder is attending or working at is located if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The city and state where the institution that the account holder is attending or working at is located if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 College City State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_College_Duration__c</fullName>
        <description>This field is optional and manually updated. A description of how long the account holder will be attending the college or institution if the account holder is a non resident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>A description of how long the account holder will be attending the college or institution if the account holder is a non resident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 College Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_College_Name__c</fullName>
        <description>This field is optional and manually updated. The name of the institution that the account holder is attending or working at if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The name of the institution that the account holder is attending or working at if the account holder is a nonresident alien. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 College Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Delegate_Name__c</fullName>
        <description>This field is optional and manually updated. The name of the person signing on behalf of the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The name of the person signing on behalf of the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 Delegate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Delegate_Relationship_Type__c</fullName>
        <description>This field is optional and manually updated. The type of relationship the delegate has with the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</description>
        <inlineHelpText>The type of relationship the delegate has with the account holder. Form specific for the Application for IRS Individual Taxpayer Identification Number (W-7).</inlineHelpText>
        <label>Form W7 Delegate Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Court-appointed Guardian</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Exception_1a_Partnership_EIN__c</fullName>
        <description>This field is optional and manually updated. The EIN (Employer Identification Number) of the partnership qualifying for &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h&apos; for applying for an ITIN.</description>
        <inlineHelpText>This field is optional and manually updated. The EIN (Employer Identification Number) of the partnership qualifying for &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h&apos; for applying for an ITIN.</inlineHelpText>
        <label>Form W7 Exception 1a Partnership EIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Foreign_DL_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually updated. Foreign Drivers License is being used to verify identity (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Drivers License is being used to verify identity (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Foreign DL Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Foreign_Voter_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. Foreign Voters Registration Card verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Voters Registration Card verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Foreign Voter ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Medical_Records_ID_Verifies__c</fullName>
        <description>This field is optional and manually updated. Medical Records (valid only for dependents under age 14 or under age 18 if a student) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Medical Records (valid only for dependents under age 14 or under age 18 if a student) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Medical Records ID Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_National_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. National Identification Card (must be current and contain name photograph address date of birth and expiration date) verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>National Identification Card (must be current and contain name photograph address date of birth and expiration date) verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 National ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Passport_Verifies__c</fullName>
        <description>This field is optional and manually updated. Indicates that the individual&apos;s passport (stand alone document) verifies foreign status identity or both (on IRS form W-7(COA)).</description>
        <inlineHelpText>Indicates that the individual&apos;s passport (stand alone document) verifies foreign status identity or both (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 Passport Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
                <value>
                    <fullName>Identity and foreign status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Previous_First_Name__c</fullName>
        <description>This field is optional and manually updated. The first name of account holder&apos;s previous name.</description>
        <inlineHelpText>The first name of account holder&apos;s previous name.</inlineHelpText>
        <label>Form W7 Previous First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Previous_IRSN__c</fullName>
        <description>This field is optional and manually updated. The individual Holder&apos;s IRSN number if one has been previously issued used for purposes of the Form W-7 Application for Individual Taxpayer Identification Number (ITIN).</description>
        <inlineHelpText>The individual Holder&apos;s IRSN number if one has been previously issued used for purposes of the Form W-7 Application for Individual Taxpayer Identification Number (ITIN).</inlineHelpText>
        <label>Form W7 Previous IRSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Previous_Name__c</fullName>
        <description>This field is optional and manually updated. The name under which the individual Holder&apos;s IRSN number if applicable was previously issued.</description>
        <inlineHelpText>The name under which the individual Holder&apos;s IRSN number if applicable was previously issued.</inlineHelpText>
        <label>Form W7 Previous Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Program_Office__c</fullName>
        <description>This field is optional and manually updated. The 8-digit office code that was issued to by the ITIN Program Office for the IRS Form W-7.</description>
        <inlineHelpText>The 8-digit office code that was issued to by the ITIN Program Office for the IRS Form W-7.</inlineHelpText>
        <label>Form W7 Program Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_School_Records_Verifies__c</fullName>
        <description>This field is optional and manually updated. School Records (valid only for dependents under age 14 or under age 18 if a student) verify either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>School Records (valid only for dependents under age 14 or under age 18 if a student) verify either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 School Records Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Treaty_Article_Number__c</fullName>
        <description>This field is optional and manually updated. The article number of the treaty under which the account holder receives benefits.</description>
        <inlineHelpText>The article number of the treaty under which the account holder receives benefits.</inlineHelpText>
        <label>Form W7 Treaty Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Treaty_Country__c</fullName>
        <description>This field is optional and manually updated. The country under whose treaty the account holder receives benefits.</description>
        <inlineHelpText>The country under whose treaty the account holder receives benefits.</inlineHelpText>
        <label>Form W7 Treaty Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Type_Other__c</fullName>
        <description>This field is optional and manually updated. A description of the other reason the application for US Individual Taxpayer Identification Number is being submitted.</description>
        <inlineHelpText>A description of the other reason the application for US Individual Taxpayer Identification Number is being submitted.</inlineHelpText>
        <label>Form W7 Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Type__c</fullName>
        <description>This field is optional and manually updated. Specifies the reason the account holder is submitting an application for an IRS Individual Taxpayer Identification Number.</description>
        <inlineHelpText>Specifies the reason the account holder is submitting an application for an IRS Individual Taxpayer Identification Number.</inlineHelpText>
        <label>Form W7 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nonresident Alien Tax Treaty</fullName>
                </value>
                <value>
                    <fullName>Nonresident Alien Filing Tax Return</fullName>
                </value>
                <value>
                    <fullName>Resident Alien Filing Tax Return</fullName>
                </value>
                <value>
                    <fullName>Citizen Dependent</fullName>
                </value>
                <value>
                    <fullName>Citizen Spouse</fullName>
                </value>
                <value>
                    <fullName>Nonresident Alien Student, Professor, or Researcher</fullName>
                </value>
                <value>
                    <fullName>Dependent or Spouse of Nonresident Alien</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_USCIS_Verifies__c</fullName>
        <description>This field is optional and manually updated. United States Citizenship and Immigration Services (USCIS) Photo Identification verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>United States Citizenship and Immigration Services (USCIS) Photo Identification verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 USCIS Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_US_Entry_Date__c</fullName>
        <description>This field is optional and manually updated. The date the account holder entered the United State.</description>
        <inlineHelpText>The date the account holder entered the United State.</inlineHelpText>
        <label>Form W7 US Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Former_Employer_EIN__c</fullName>
        <description>This field is optional and manually updated. The previous employer identification number of the account holder.</description>
        <inlineHelpText>The previous employer identification number of the account holder.</inlineHelpText>
        <label>Former Employer EIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Former_Employer_Name__c</fullName>
        <description>This field is optional and manually updated. The name under which the previous employer identification number for the account holder was issued.</description>
        <inlineHelpText>The name under which the previous employer identification number for the account holder was issued.</inlineHelpText>
        <label>Former Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gender__c</fullName>
        <description>This field is optional and manually updated. Specifies the gender type of the account holder.</description>
        <inlineHelpText>Specifies the gender type of the account holder.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Not Disclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Address_County__c</fullName>
        <description>Users populate this optional text field with the county name for the home address.</description>
        <label>Home Address County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Address__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Street address of the Contact&apos;s home address</description>
        <label>Home Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_City__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the City of the Contact&apos;s home address</description>
        <label>Home City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Location__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Geolocation of the home address ( Latitude and Longitude)</description>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_State__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the State of the Contact&apos;s home address</description>
        <label>Home State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Zipcode__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Zipcode of the Contact&apos;s home address</description>
        <label>Home ZIP Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Identity_Verification_Date__c</fullName>
        <description>This field automatically populates. It indicates the most recent date and time the contact initiated identity verification.</description>
        <label>Identity Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Identity_Verification_Status__c</fullName>
        <description>This picklist field automatically populates. It indicates the identity verification status of the contact.</description>
        <label>Identity Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication Error</fullName>
                </value>
                <value>
                    <fullName>ID Verification Failure</fullName>
                </value>
                <value>
                    <fullName>Not Eligible for Questions</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Retry Limited Exceeded</fullName>
                </value>
                <value>
                    <fullName>Unable to Generate Questions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Languages__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Language(s) of the contact&apos;s preference</description>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Level__c</fullName>
        <description>This field is not required and is manually populated. This field defines the priority level of a contact to its associated relationship.</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_Address_County__c</fullName>
        <description>Users populate this optional text field with the county name for the mailing address.</description>
        <label>Mailing Address County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Marital_Status__c</fullName>
        <description>This field is optional. This field is manually populated. This field is used to set a contact&apos;s marital status.</description>
        <inlineHelpText>This field is used to set a contact&apos;s marital status.</inlineHelpText>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
                <value>
                    <fullName>Legally Separated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__NetConnect_Pull_Date__c</fullName>
        <description>This field is currently not being used</description>
        <label>NetConnect Pull Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__OFAC_Check_Completion_Date__c</fullName>
        <description>The date in which the latest OFAC check was run for a given individual. This field is optional and can be edited via the customer creation workflow.</description>
        <label>OFAC Check Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident_Entry_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It is the date of entry to the United States for a permanent resident.</description>
        <label>Permanent Residency Date of Entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident_Issue_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It is the issue date of permanent residency.</description>
        <label>Permanent Residency Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident_Number__c</fullName>
        <description>This field is optional and manually updated. If the contact is a permanent resident this holds the resident number. A 13 digit alpha numeric text.</description>
        <label>Permanent Resident Number</label>
        <length>13</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident__c</fullName>
        <description>This field is optional and manually updated. This is used to describe if the contact is a US Citizen</description>
        <label>Are you a permanent US Resident?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Phone_Number_Type__c</fullName>
        <description>This field is optional. The user manually populates this field. It describes the type of phone number.</description>
        <label>Phone Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Preferred_Contact_Method__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the customer&apos;s preferred contact method.</description>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually updated. This field is used as an indicator that the contact record is the primary contact for the relationship it is associated to.</description>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_ID_Expiration_Date__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the date the Primary ID ( ie Driver&apos;s License) will expire</description>
        <label>Primary ID Expiration Date</label>
        <type>Date</type>
    </fields>
</CustomObject>